--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/pg": "^8.11.0",
-    "pg": "^8.11.3",
     "@remix-run/dev": "^2.16.8",
     "@remix-run/node": "^2.16.8",
     "@remix-run/react": "^2.16.8",
@@ -26,22 +24,30 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/memoizee": "^0.4.12",
+    "@types/pg": "^8.11.0",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.8",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "connect-pg-simple": "^10.0.0",
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.44.2",
     "express-session": "^1.18.1",
+    "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "memoizee": "^0.4.17",
     "openid-client": "^6.5.1",
     "passport": "^0.7.0",
+    "pg": "^8.11.3",
     "postcss": "^8.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -49,11 +55,6 @@
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "vitest": "^2.1.8",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^2.1.8",
-    "jsdom": "^26.0.0"
+    "zod": "^3.25.56"
   }
 }
